--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,7 +10,9 @@ button {
   text-transform: uppercase;
   border: none;
   margin-left: 20px;
-  border-radius: 2px; }
+  border-radius: 2px;
+  padding-left: 16px;
+  padding-right: 16px; }
 
 form {
   margin-bottom: 40px; }
@@ -20,4 +22,5 @@ header, form, .app-container {
 
 .app-container {
   background: #FDFFFC;
-  border-radius: 5px; }
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26); }
